kubernetes/platform/hardening/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-all
  namespace: applications

spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-all
  namespace: data

spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
